# crypto

./: .gitignore  .pre-commit-config.yaml  Dockerfile.pyflink  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
deployment/docker/: Dockerfile.clickhouse  Dockerfile.olap  Dockerfile.oltp  Dockerfile.postgres  Dockerfile.producer  Dockerfile.pyflink  Dockerfile.stream-processor  Dockerfile.streamlit  docker-compose.yml  requirements-db.txt  requirements-producer.txt  requirements-stream-processor.txt  requirements-streamlit.txt
deployment/docker/init-scripts/: init-clickhouse.sh  init-clickhouse.sql  init-db.sql  init-kafka-topics.sh  start-jobmanager-with-job.sh
ingestion/: crypto_producer.py
scripts/: README.md  health-check.sh  logs.sh  start-pipeline.sh  stop-pipeline.sh  test_websocket.py
src/pipeline/: __init__.py
src/pipeline/connectors/: __init__.py  kafka_to_clickhouse.py  kafka_to_psql.py
src/pipeline/core/: __init__.py  config.py  database.py  logging.py
src/pipeline/data_ingestion/: crypto_data_producer.py
src/pipeline/data_services/: olap_service.py  oltp_service.py
src/pipeline/ingestion/: __init__.py  producer.py
src/pipeline/processing/: __init__.py  stream_processor.py
src/pipeline/services/: __init__.py  olap_service.py  oltp_service.py
src/pipeline/stream_processing/: flink_stream_processor.py
src/pipeline/visualization/: streamlit_app.py
transform/stream/: pyflink_job.py
