[project]
name = "crypto"
version = "0.1.0"
description = ""
authors = [
    {name = "Naufal Ihsan",email = "naufal.ihsan21@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "apache-flink==1.20.0",
    "apache-flink-libraries==1.20.0",
    "kafka-python==2.0.2",
    "websockets==12.0",
    "requests==2.31.0",
    "jsonschema==4.0.0",
    "py4j==0.10.9.5",
    "cloudpickle==2.0.0",
    "python-dateutil==2.8.0",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
